bug 19803 - source textbox is clipped on add-on install dialog for languages where the description tags have wrapped to multiple lines
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@17228 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/feathers.css
+++ b/feathers/purplerain/chrome/skin/feathers.css
@@ -1291,6 +1291,7 @@ domi-panelset label.viewer-title {
 #itemList {
   background-color: rgb(43,41,54);
   border: none;
+  overflow: visible !important;
 }
 
 /******************************************************************************
